{
  "version": 4,
  "terraform_version": "1.10.3",
  "serial": 18,
  "lineage": "58b9e24c-ede9-821d-0bd9-e11f4889ac4d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08eb4db5a75153599",
            "arn": "arn:aws:ec2:us-east-2:339713015370:instance/i-0775c7341bfbd4ddb",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0775c7341bfbd4ddb",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t4g.nano",
            "ipv6_address_count": 0,
            "key_name": "computer_use_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-04d06f5e7de1f04bb",
            "private_dns": "ip-10-0-1-72.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.72",
            "public_dns": "ec2-3-142-36-200.us-east-2.compute.amazonaws.com",
            "public_ip": "3.142.36.200",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-00884b21d09eed820",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-091a0fc4faba8ea49",
            "tags": {
              "Application": "emblem-browser-use",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "emblem-browser-use-bastion"
            },
            "tags_all": {
              "Application": "emblem-browser-use",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "emblem-browser-use-bastion"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0adebf0a0fade352c"
            ]
          },
          "dependencies": [
            "aws_security_group.bastion"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:339713015370:security-group/sg-0adebf0a0fade352c",
            "description": "Security group for emblem-browser-use bastion host",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0adebf0a0fade352c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "emblem-browser-use-bastion-sg",
            "name_prefix": "",
            "owner_id": "339713015370",
            "revoke_rules_on_delete": false,
            "tags": {
              "Application": "emblem-browser-use",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "emblem-browser-use-bastion-sg"
            },
            "tags_all": {
              "Application": "emblem-browser-use",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "emblem-browser-use-bastion-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fb3c875f3eed4edb"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:339713015370:security-group/sg-0052cb077cc8229ca",
            "description": "Security group for emblem-browser-use EC2 instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0052cb077cc8229ca",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow SSH from bastion host",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0adebf0a0fade352c"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "emblem-browser-use-ec2-sg",
            "name_prefix": "",
            "owner_id": "339713015370",
            "revoke_rules_on_delete": false,
            "tags": {
              "Application": "emblem-browser-use",
              "Environment": "dev",
              "ManagedBy": "terraform"
            },
            "tags_all": {
              "Application": "emblem-browser-use",
              "Environment": "dev",
              "ManagedBy": "terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fb3c875f3eed4edb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion"
          ]
        }
      ]
    }
  ]
}